--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rainbow-me/rainbowkit": "^2.1.0",
     "@tanstack/react-query": "^5.28.0",
     "geist": "^1.5.1",
+    "lightweight-charts": "^5.0.9",
     "next": "14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -30,5 +31,3 @@
     "typescript": "^5.5.3"
   }
 }
-
-
